2010-01-24  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items: Use horizontal alignment from formatting.
  
	* glom/utility_widgets/labelglom.[h|cc]: Add a constructor that does not 
	take alignment values, like the Gtk::Label base class, so we can easily 
	use the default for vertical alignment.
	* glom/mode_data/flowtablewithfields.cc: add_textobject_at_position():
	Use expand=true when adding the widget to the FlowTable, so that labels can 
	have the full space in which to actually have alignment.
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting: Use appropriate 
	multi-line justification for labels, as a user would expect when setting 
	horizontal alignment.

2010-01-23  Murray Cumming  <murrayc@murrayc.com>

  Details: Buttons: Use background color from formatting.
  
	* glom/mode_data/flowtablewithfields.cc: add_button_at_position(): Call 
	apply_formatting on the button, not the label, so it has a chance to do the 
	right thing on the right widget.

2010-01-23  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items: Use background color from formatting.
  
	* glom/utility_widgets/labelglom.cc: Do not call set_visible_window(false)
	because we really need a visible child X window to be able to change the 
	background color.

2010-01-23  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items and Buttons: Use foreground color from formatting.
   
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting(): Use the 
	foreground color for labels (static text items and buttons).

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

  Details: Static Text items: Use formatting.
  
	* glom/utility_widgets/labelglom.[h|cc]: Added get_label(), because this 
	really has a label as a child.
	* glom/utility_widgets/layoutwidgetbase.cc: apply_formatting(): Use get_label() 
	to make formatting work on static text items too.

2.13.1:

2010-01-22  Murray Cumming  <murrayc@murrayc.com>

  Fixed compiler warnings.
  