@@ -1,5 +1,14 @@
 2010-01-24  Murray Cumming  <murrayc@murrayc.com>
 
+  Details: Buttons: Use horizontal aligment from formatting.
+  
+	* glom/mode_data/flowtablewithfields.cc: add_button_at_position():
+	Use a Gtk::HBox with either pack_start() or pack_end(), putting it in the 
+	FlowTable with expand=true to have alignment in the button's space, if we 
+	don't want the FlowTable's default (left) alignment.
+
+2010-01-24  Murray Cumming  <murrayc@murrayc.com>
+
   Details: Static Text items: Use horizontal alignment from formatting.
   
 	* glom/utility_widgets/labelglom.[h|cc]: Add a constructor that does not 
